# chatroom_server

./: .gitignore  .pre-commit-config.yaml  README.md  TESTS.md  conftest.py  logging_config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
auth/: mock_auth.py
docs/endpoints/: chatrooms.yaml
handlers/: create_chatroom_handler.py  list_chatrooms_handler.py  wss_client_handler.py
handlers/http_srv/: create_chatroom.py  create_chatroom_handler.py  list_chatrooms_handler.py
handlers/wss_srv/: chatrooms.py  clients.py  shutdown_signal.py  shutdown_websockets.py  wss_handler.py
handlers/wss_srv/client/: handle_client.py  invalid_json.py  message_rate.py  pending_tasks.py  process_message.py  unknown_message.py
servers/: http_srv.py  wss.py  wss_srv.py
tests/: test_100_join_chat.py  test_chatroom.py  test_wss_conn.py  wss_conn_probe.py  wss_test.py
tests/artillery/: processor.js  ws_full.yaml
tests/k6_tests/: ws_1000.js  ws_full.js
tests/k6_tests/scratch/: ws_connect.js  ws_full_test.js  ws_highload_test.js  ws_test.js  ws_test_script.js
tests/locust_tests/: locustfile.py  ws_locust.py
utils/: chat_user.py  create_chatroom.py  http_status.py
utils/wss/: brodcast_to_room.py  handle_chat.py  handle_disconnect.py  handle_join.py  handle_user_event.py  message_types.py
